[package]
name = "bitcoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# abci for server/app
abci-rs = { version = "0.11.3", features = ["async-api" ] }
async-trait = "0.1.56"
tokio = { version = "1.27.0", features = ["macros"] }

eyre = "0.6.8"
hex = "0.4.3"
serde_json = "1.0.82"
serde = { version = "1.0.138", features = ["derive"] }

# cli lib
clap = { version = "3.0.10", features = [
    "derive",
    "env",
    "unicode",
    "wrap_help",
] }
clap_complete = "3.0.4"

reqwest = "0.11.11"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "fmt"] }
tracing-error = "0.2.0"
yansi = "0.5.1"
once_cell = "1.13.0"

# bitcoin lib
thiserror = "1"
anyhow = "1"
bincode = "1.3.3"
rust-crypto = "0.2.36"
chrono = "0.4.19"
bigint = "4.4.3"
sled = "0.34"
ring = "0.16.20"
rustc-serialize = "0.3.24"
bs58 = "0.4.0"
futures = "0.3"
libp2p = { version = "0.51.0" }