[package]
name = "pow-abci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["codec"]}
reqwest = "0.11.11"
tracing = "0.1.35"
warp = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
bincode = "1.3.3"
hex = "0.4.3"
thiserror = "1"
once_cell = "1.13.0"
bs58 = "0.4.0"
base64 = "0.13.0"
log = "0.4.11"
futures = "0.3.15"
eyre = "0.6.8"
clap = "2.33.3"

# ABCI lib
# tendermint-abci = { version = "0.25.0", features = ["client"] }
tendermint-abci = {git = "https://github.com/DoraFactory/tendermint-rs", branch = "v0.25.0-dev", features = ["client"]}
# tendermint-proto = "0.25.0"
tendermint-proto = {git = "https://github.com/DoraFactory/tendermint-rs", branch = "v0.25.0-dev"}
# tendermint-rpc = {git = "https://github.com/joneskm/tendermint-rs"}
tendermint-rpc = {git = "https://github.com/DoraFactory/tendermint-rs"}
ibc-proto = { git = "https://github.com/joneskm/ibc-proto-rs" }

# pow lib
anyhow = "1"
bigint = "4.4.3"
rust-crypto = "0.2.36"
ring = "0.16.20"