[package]
name = "pow-abci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["codec"]}

warp = "0.3.3"
rocksdb = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.11"
futures = "0.3.15"
eyre = "0.6.8"
clap = "2.33.3"

bincode = "1.3.3"
hex = "0.4.3"

tendermint-abci = { version = "0.25.0", features = ["client"] }
tendermint-proto = "0.25.0"

serde_json = "1.0.82"
